--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,33 @@
         gap: 1rem;
       }
 
+      .auth-toggle {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 0.35rem;
+        background: var(--surface);
+        padding: 0.25rem;
+        border-radius: 999px;
+        border: 1px solid var(--border);
+      }
+
+      .auth-toggle button {
+        border: none;
+        background: transparent;
+        color: var(--subtle);
+        font-weight: 600;
+        border-radius: 999px;
+        padding: 0.65rem 0.5rem;
+        cursor: pointer;
+        transition: background 0.2s ease, color 0.2s ease;
+      }
+
+      .auth-toggle button.active {
+        background: var(--card);
+        color: var(--text);
+        box-shadow: 0 6px 12px rgba(17, 17, 17, 0.08);
+      }
+
       label {
         display: flex;
         flex-direction: column;
@@ -143,6 +170,15 @@
         font-size: 0.9rem;
         margin-top: 0.25rem;
         min-height: 1.25rem;
+      }
+
+      .field-hint {
+        font-size: 0.8rem;
+        color: var(--subtle);
+      }
+
+      .full-name-field.hidden {
+        display: none;
       }
 
       .muted.error {
@@ -276,7 +312,7 @@
   </head>
   <body>
     <main>
-      <header>
+      <header id="site-header" class="hidden">
         <h1>Bus Status</h1>
         <p>
           Made by Furkan Öztürk for Trend ISG.
@@ -285,21 +321,30 @@
 
       <section class="card auth-card" id="auth-card">
         <form id="auth-form" autocomplete="on">
+          <div class="auth-toggle" role="tablist" aria-label="Authentication mode">
+            <button type="button" data-auth-mode="signin" class="active" aria-pressed="true">
+              Sign In
+            </button>
+            <button type="button" data-auth-mode="register" aria-pressed="false">
+              Create Account
+            </button>
+          </div>
           <label>
             Email
             <input type="email" id="email" name="email" placeholder="you@email.com" required />
           </label>
-          <label>
-            Full name
-            <input
-              type="text"
-              id="full-name"
-              name="fullName"
-              placeholder="Jessica Lee"
-              autocomplete="name"
-              required
-            />
-          </label>
+          <div class="full-name-field hidden" id="full-name-field">
+            <label>
+              Full name
+              <input
+                type="text"
+                id="full-name"
+                name="fullName"
+                placeholder="Jessica Lee"
+                autocomplete="name"
+              />
+            </label>
+          </div>
           <label>
             Password
             <input
@@ -312,10 +357,7 @@
             />
           </label>
           <div class="form-actions">
-            <button type="submit" name="action" value="signin">Sign In</button>
-            <button type="submit" name="action" value="register" class="ghost">
-              Create Account
-            </button>
+            <button type="submit" id="auth-submit">Sign In</button>
           </div>
         </form>
         <p class="muted" id="auth-message">
@@ -397,11 +439,15 @@
       const db = getFirestore(app);
 
       const authCard = document.getElementById("auth-card");
+      const siteHeader = document.getElementById("site-header");
       const dashboard = document.getElementById("dashboard");
       const authForm = document.getElementById("auth-form");
       const emailInput = document.getElementById("email");
       const fullNameInput = document.getElementById("full-name");
       const passwordInput = document.getElementById("password");
+      const modeButtons = document.querySelectorAll("[data-auth-mode]");
+      const fullNameField = document.getElementById("full-name-field");
+      const authSubmitButton = document.getElementById("auth-submit");
       const authMessage = document.getElementById("auth-message");
       const rosterMessage = document.getElementById("roster-message");
       const groupMessage = document.getElementById("group-message");
@@ -412,6 +458,7 @@
       const userEmailEl = document.getElementById("user-email");
       const signOutButton = document.getElementById("sign-out");
 
+      let authMode = "signin";
       let currentUser = null;
       let currentGroupId = null;
       let currentProfile = { fullName: "" };
@@ -426,9 +473,11 @@
         if (isSignedIn) {
           authCard.classList.add("hidden");
           dashboard.classList.remove("hidden");
+          siteHeader?.classList.remove("hidden");
         } else {
           authCard.classList.remove("hidden");
           dashboard.classList.add("hidden");
+          siteHeader?.classList.add("hidden");
         }
       }
 
@@ -447,6 +496,23 @@
         if (!groupMessage) return;
         groupMessage.textContent = message;
         groupMessage.classList.toggle("error", isError);
+      }
+
+      function setAuthMode(mode) {
+        authMode = mode === "register" ? "register" : "signin";
+        const needsFullName = authMode === "register";
+        modeButtons.forEach((button) => {
+          const isActive = button.dataset.authMode === authMode;
+          button.classList.toggle("active", isActive);
+          button.setAttribute("aria-pressed", String(isActive));
+        });
+        fullNameField.classList.toggle("hidden", !needsFullName);
+        fullNameInput.required = needsFullName;
+        authSubmitButton.textContent = needsFullName ? "Create Account" : "Sign In";
+        if (needsFullName) {
+          attemptFullNamePrefill();
+        }
+        setAuthMessage("");
       }
 
       function isValidGroupId(groupId) {
@@ -824,11 +890,18 @@
       }
 
       function attemptFullNamePrefill() {
+        if (authMode !== "register") return;
         const suggestion = recallFullName(emailInput.value.trim());
         if (suggestion && !fullNameInput.value.trim()) {
           fullNameInput.value = suggestion;
         }
       }
+
+      modeButtons.forEach((button) => {
+        button.addEventListener("click", () => setAuthMode(button.dataset.authMode));
+      });
+
+      setAuthMode("signin");
 
       emailInput.addEventListener("blur", attemptFullNamePrefill);
       emailInput.addEventListener("change", attemptFullNamePrefill);
@@ -836,18 +909,15 @@
       authForm.addEventListener("submit", async (event) => {
         event.preventDefault();
         const email = emailInput.value.trim();
-        const fullName = sanitizeFullName(fullNameInput.value);
-        fullNameInput.value = fullName;
+        const isRegister = authMode === "register";
+        const fullName = isRegister ? sanitizeFullName(fullNameInput.value) : "";
+        if (isRegister) {
+          fullNameInput.value = fullName;
+        }
         const password = passwordInput.value.trim();
-        const action = event.submitter?.value ?? "signin";
 
         if (!email) {
           setAuthMessage("Enter an email address.", true);
-          return;
-        }
-
-        if (!fullName) {
-          setAuthMessage("Enter your full name.", true);
           return;
         }
 
@@ -856,11 +926,20 @@
           return;
         }
 
-        pendingIdentity = { email, fullName };
-        rememberFullName(email, fullName);
+        if (isRegister && !fullName) {
+          setAuthMessage("Enter your full name.", true);
+          return;
+        }
+
+        if (isRegister) {
+          pendingIdentity = { email, fullName };
+          rememberFullName(email, fullName);
+        } else {
+          pendingIdentity = null;
+        }
 
         try {
-          if (action === "register") {
+          if (isRegister) {
             setAuthMessage("Creating your account…");
             await createUserWithEmailAndPassword(auth, email, password);
             setAuthMessage("Account created. Signing you in…");
