--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bus Status</title>
+    <title>Trend ISG</title>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -428,10 +428,10 @@
       };
 
       const GROUPS = Object.freeze({
-        A: "Group A",
-        B: "Group B",
-        C: "Group C",
-        D: "Group D",
+        A: "A",
+        B: "B",
+        C: "C",
+        D: "D",
       });
 
       const app = initializeApp(firebaseConfig);
