--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
       .muted {
         color: var(--subtle);
         font-size: 0.9rem;
-        margin-top: 0.25rem;
+        margin: 0;
         min-height: 1.25rem;
       }
 
