--- a/public/index.html
+++ b/public/index.html
@@ -340,7 +340,7 @@
                 type="text"
                 id="full-name"
                 name="fullName"
-                placeholder="Jessica Lee"
+                placeholder="Saul Goodman"
                 autocomplete="name"
               />
             </label>
