--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,37 @@
         display: none;
       }
 
+      .password-input {
+        position: relative;
+      }
+
+      .password-input input {
+        width: 100%;
+        padding-right: 4.75rem;
+      }
+
+      .password-visibility {
+        position: absolute;
+        right: 0.35rem;
+        top: 50%;
+        transform: translateY(-50%);
+        background: transparent;
+        color: var(--text);
+        padding: 0.35rem 0.75rem;
+        font-size: 0.85rem;
+        font-weight: 600;
+        border: none;
+      }
+
+      .password-visibility:hover {
+        opacity: 0.7;
+      }
+
+      .password-visibility:focus-visible {
+        outline: 2px solid var(--text);
+        outline-offset: 3px;
+      }
+
       .muted.error {
         color: #b3261e;
       }
@@ -355,14 +386,24 @@
           </div>
           <label>
             Password
-            <input
-              type="password"
-              id="password"
-              name="password"
-              minlength="6"
-              placeholder="Minimum 6 characters"
-              required
-            />
+            <div class="password-input">
+              <input
+                type="password"
+                id="password"
+                name="password"
+                minlength="6"
+                placeholder="Minimum 6 characters"
+                required
+              />
+              <button
+                type="button"
+                class="password-visibility"
+                id="password-visibility"
+                aria-pressed="false"
+              >
+                Show
+              </button>
+            </div>
           </label>
           <div class="form-actions">
             <button type="submit" id="auth-submit">Sign In</button>
@@ -451,6 +492,7 @@
       const emailInput = document.getElementById("email");
       const fullNameInput = document.getElementById("full-name");
       const passwordInput = document.getElementById("password");
+      const passwordToggleButton = document.getElementById("password-visibility");
       const modeButtons = document.querySelectorAll("[data-auth-mode]");
       const fullNameField = document.getElementById("full-name-field");
       const authSubmitButton = document.getElementById("auth-submit");
@@ -474,6 +516,7 @@
       let groupUnsubscribe = null;
       let selfEntry = null;
       let isRosterMutating = false;
+      let isPasswordVisible = false;
 
       function toggleViews(isSignedIn) {
         if (isSignedIn) {
@@ -502,6 +545,16 @@
         groupMessage.classList.toggle("error", isError);
       }
 
+      function setPasswordVisibility(visible) {
+        if (!passwordInput) return;
+        isPasswordVisible = Boolean(visible);
+        passwordInput.type = isPasswordVisible ? "text" : "password";
+        if (passwordToggleButton) {
+          passwordToggleButton.textContent = isPasswordVisible ? "Hide" : "Show";
+          passwordToggleButton.setAttribute("aria-pressed", String(isPasswordVisible));
+        }
+      }
+
       function setAuthMode(mode) {
         authMode = mode === "register" ? "register" : "signin";
         const needsFullName = authMode === "register";
@@ -517,6 +570,7 @@
           attemptFullNamePrefill();
         }
         setAuthMessage("");
+        setPasswordVisibility(false);
       }
 
       function isValidGroupId(groupId) {
@@ -902,6 +956,13 @@
 
       emailInput.addEventListener("blur", attemptFullNamePrefill);
       emailInput.addEventListener("change", attemptFullNamePrefill);
+
+      if (passwordToggleButton) {
+        passwordToggleButton.addEventListener("click", () => {
+          setPasswordVisibility(!isPasswordVisible);
+          passwordInput?.focus();
+        });
+      }
 
       authForm.addEventListener("submit", async (event) => {
         event.preventDefault();
