--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Trend ISG</title>
+    <link rel="icon" type="image/png" sizes="512x512" href="indapentx.png" />
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
