--- a/public/404.html
+++ b/public/404.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lost Bus Stop · Trend ISG</title>
-    <link rel="icon" type="image/png" sizes="512x512" href="/indapentx.png" />
+    <title>Lost Bus Stop - Trend ISG</title>
+    <link rel="icon" type="image/png" sizes="512x512" href="indapentx.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
