--- a/public/index.html
+++ b/public/index.html
@@ -489,9 +489,9 @@
       </section>
 
       <section class="card admin-panel hidden" id="admin-panel">
-        <div class="user-row">
-          <div>
-            <p class="eyebrow">Admin view</p>
+	        <div class="user-row">
+	          <div>
+	            <p class="eyebrow">Staff view</p>
             <p class="user-email" id="admin-user-email">—</p>
           </div>
           <button class="ghost" id="admin-sign-out">Sign Out</button>
@@ -759,9 +759,10 @@
         const date = toDate(value);
         if (!date) return "--:--";
         try {
-          return new Intl.DateTimeFormat([], {
+          return new Intl.DateTimeFormat("en-US", {
             hour: "numeric",
             minute: "2-digit",
+            hour12: true,
           }).format(date);
         } catch {
           return "--:--";
